--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/vue": "^5.0.11",
-    "astro": "^5.7.5"
+    "astro": "^5.7.5",
+    "pinia": "^3.0.2"
   }
 }
